HFP-4115 fix summary submit button contrast (#166)
* HFP-4115 fix summary submit button contrast

* HFP-4115 increased focus-visible border size so that chrome focus highlight does not completely cover it

--- a/src/styles/_summary.scss
+++ b/src/styles/_summary.scss
@@ -217,12 +217,15 @@
     .h5p-interactive-book-summary-submit {
       background-color: #0E7C57;
       color: #ffffff;
-      border: 1px solid #0E7C57;
+      border: 4px solid #0E7C57;
       transition: background-color 150ms;
 
       &:hover {
         background-color: #0c694a;
       }
+    }
+    .h5p-interactive-book-summary-submit:focus-visible {
+      border: 4px solid #FFF;
     }
 
     .h5p-interactive-book-summary-restart {
